--- a/bqBOX/AndroidManifest.xml
+++ b/bqBOX/AndroidManifest.xml
@@ -7,8 +7,9 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
-    
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+
+    <uses-permission android:name="android.permission.INTERNET" >
+    </uses-permission>
 
     <application
         android:allowBackup="true"
@@ -38,6 +39,10 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.jfrascon.bqbox.EbooksActivity"
+            android:label="@string/title_activity_ebooks" >
         </activity>
     </application>
 
