--- a/bqBOX/AndroidManifest.xml
+++ b/bqBOX/AndroidManifest.xml
@@ -19,7 +19,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.jfrascon.bqbox.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -43,7 +44,8 @@
         </activity>
         <activity
             android:name="com.jfrascon.bqbox.EbooksActivity"
-            android:label="@string/title_activity_ebooks" >
+            android:label="@string/title_activity_ebooks" 
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
