--- a/bqBOX/AndroidManifest.xml
+++ b/bqBOX/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:minSdkVersion="15"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- </uses-permission> -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,8 +19,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.jfrascon.bqbox.MainActivity"
-            android:label="@string/app_name" 
-            android:screenOrientation="portrait">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,8 +44,12 @@
         </activity>
         <activity
             android:name="com.jfrascon.bqbox.EbooksActivity"
-            android:label="@string/title_activity_ebooks" 
-            android:screenOrientation="portrait">
+            android:label="@string/title_activity_ebooks"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.jfrascon.bqbox.PortadaActivity"
+            android:label="@string/title_activity_portada" >
         </activity>
     </application>
 
